# nlp-index

./: README.md  TODO.md  dvc.yaml  pyproject.toml
data/prepared/: .gitignore
data/raw/: .gitignore  chat_export.dvc  chat_export.json.dvc
nlp_index/: config.py  parse.py  query.py
notebooks/: 001.ipynb  002 Export data from telegram.ipynb
src/nlp_index/: __init__.py  config.py  index.py
src/nlp_index/data/: parse.py
