[tool.poetry]
name = "nlp-index"
version = "0.1.0"
description = "Find answers from NLP group faster"
authors = ["lainisourgod <beaverloverock@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nlp_index"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.247"
llama-index = "^0.7.15"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
dvc = "^3.10.1"
rich = "^13.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
